--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "webpack": "^2.2.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack"
+    },
   "author": "",
   "license": "ISC"
 }
