--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/webpack"
-    },
+  },
   "author": "",
   "license": "ISC"
 }
